# tursopy

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: cicd.yml  release.yml
css/: custom.css
docs/: index.md  requirements.txt
js/: custom.js  termynal.js
search/: search_index.json
tests/: conftest.py  test_tursopy_client.py  test_tursopy_db.py
tursopy/: __init__.py  dataclasses.py  db.py  endpoints.py  exceptions.py  tursopy.py
